<resources>
    <string name="app_name">英雄猫</string>
    <string name="app_subtitle">...</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_login">登陆</string>
    <string name="drawer_favourite">收藏</string>
    <string name="drawer_setting">设置</string>

    <string name="login_account">用户名/邮箱/手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_button">登陆</string>
    <string name="login_problem">忘记密码？</string>
    <string name="login_register">立即注册</string>
    <string name="fragment_register">注册</string>
    <string name="forget_password">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="verify_code">请输入验证码</string>
    <string name="submit_button">提交</string>

    <string name="register_phone">请输入手机号</string>
    <string name="register_set_code">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_set_password">设置密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_button">注册</string>
    <string name="register_login">已有账号？</string>

    <string name="cardview_hint">图片显示错误</string>
    <string name="cardview_share">分享</string>
    <string name="cardview_comment">评论</string>
    <string name="cardview_like">收藏</string>
    <string name="cardview_date">2015年11月12日 14:30:27</string>

    <drawable name="click_normal">#3F51B5</drawable>
    <drawable name="click_pressed">#0000FF</drawable>

    <string name="drawer_menu_signin">登陆</string>
    <string name="drawer_menu_signout">注销</string>
    <string name="drawer_menu_homepage">首页</string>
    <string name="drawer_menu_favourite">收藏</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_quit">退出</string>
</resources>
