<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/signin"
            android:icon="@drawable/ico_user"
            android:title="@string/drawer_menu_signin" />

        <item
            android:id="@+id/homepage"
            android:icon="@drawable/ico_home"
            android:title="@string/drawer_menu_homepage" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ico_like"
            android:title="@string/drawer_menu_favourite" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ico_settings"
            android:title="@string/drawer_menu_setting" />

        <item
            android:id="@+id/quit"
            android:icon="@drawable/ico_delete"
            android:title="@string/drawer_menu_quit" />

    </group>

</menu>