<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="2dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/cardView_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/cardView_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/cardview_date" />

        <ImageView
            android:id="@+id/picCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cardview_hint"
            android:scaleType="fitCenter"
            android:src="@drawable/ico_like" />

        <TableRow
            android:id="@+id/tableRowCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@drawable/ico_share"
                android:scaleType="fitEnd"
                android:src="@drawable/ico_share" />

            <TextView
                android:id="@+id/shareCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/cardview_share" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@drawable/ic_forum"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_forum" />

            <TextView
                android:id="@+id/commentCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/cardview_comment" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@drawable/ico_like"
                android:scaleType="fitEnd"
                android:src="@drawable/ico_like" />

            <TextView
                android:id="@+id/likeCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/cardview_like" />

        </TableRow>

    </LinearLayout>

</android.support.v7.widget.CardView>