<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="liufantech.com.yingxiongmao.login.ResetPasswordFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <liufantech.com.yingxiongmao.custom.widget.ClearEditText
        android:id="@+id/verifyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/icon_black_sms"
        android:drawablePadding="24dp"
        android:hint="@string/verify_code"
        android:inputType="number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />

    <liufantech.com.yingxiongmao.custom.widget.ClearEditText
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_black_lock"
        android:drawablePadding="24dp"
        android:hint="@string/register_set_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />

    <liufantech.com.yingxiongmao.custom.widget.ClearEditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_black_lock"
        android:drawablePadding="24dp"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_selector"
        android:clickable="false"
        android:text="@string/submit_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>