<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="liufantech.com.yingxiongmao.login.LoginFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <liufantech.com.yingxiongmao.custom.widget.ClearEditText
            android:id="@+id/loginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ico_user"
            android:drawablePadding="24dp"
            android:drawableRight="@drawable/ico_delete"
            android:hint="@string/login_account"
            android:paddingTop="16dp"
            android:textSize="16dp" />

        <liufantech.com.yingxiongmao.custom.widget.ClearEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginAccount"
            android:drawableLeft="@drawable/ico_like"
            android:drawablePadding="24dp"
            android:drawableRight="@drawable/ico_delete"
            android:hint="@string/login_password"
            android:paddingTop="16dp"
            android:password="true"
            android:textSize="16dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/loginPassword"
            android:layout_centerVertical="true"
            android:text="@string/login_button"
            android:textSize="20dp"
            android:clickable="false"
            android:textColor="#FFFFFF"
            android:background="#CCCCCC"/>

        <TextView
            android:id="@+id/loginProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/login_problem"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/loginMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/login_more"
            android:textSize="18dp" />

    </RelativeLayout>

</LinearLayout>
